# scrafurl

./: .gitignore  .lgtm.yml  meson.build
include/: scrafurl.hpp
libscrafurl/: scrafurl.cpp  scrafurl.hpp
src/: scrafurl.cpp
